--- a/ProjetoLivroAberto/src/Form/FormPrincipal.form
+++ b/ProjetoLivroAberto/src/Form/FormPrincipal.form
@@ -52,6 +52,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Clientes"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuIClienteActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuIProduto">
               <Properties>
